<resources>
    <string name="app_name">test1</string>
    <string name="text_view">HelloWorld</string>
    <string name="edit_text_str">テキストを入力してください</string>
    <string name="edit_text_num">数値を入力してください</string>
    <string name="checkbox_1">チェックボックス1</string>
    <string name="checkbox_2">チェックボックス2</string>
    <string name="radiobutton_1">ラジオボタン1</string>
    <string name="radiobutton_2">ラジオボタン2</string>
</resources>
